<resources>
    <string name="app_name">Овчелупов Антон</string>
    <string name="str_vk_profile">Профиль VK</string>
    <string name="str_email">E-mail</string>
    <string name="str_phone">Мобильный телефон</string>
    <string name="str_projects">Проектов</string>
    <string name="str_code_lines">Написано строк кода</string>
    <string name="str_rating">Рейтинг</string>
    <string name="str_repo">Репозиторий</string>
    <string name="str_about">О себе</string>
    <string name="str_about_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sit amet orci arcu.
        Etiam ac blandit mauris. Proin dapibus magna at eros pharetra vehicula. Phasellus eget feugiat mi, sit amet imperdiet
        diam. Donec non metus ac mauris semper mattis eu at tortor. Phasellus sit amet ante ut massa scelerisque pellentesque.
        Nullam facilisis auctor magna, sed posuere magna imperdiet vitae. Pellentesque habitant morbi tristique senectus et
        netus et malesuada fames ac turpis egestas. Nulla ultrices gravida placerat. In et ornare nisi. Fusce sed ex molestie,
        iaculis libero vitae, dapibus sem. Vestibulum sed faucibus lectus, eu porta ante. Nulla augue purus, posuere at nibh
        vitae, faucibus cursus ipsum. Nunc scelerisque magna eu dui cursus, a ultricies odio laoreet. In vel porta sem.
        Suspendisse id efficitur nibh, quis vehicula tellus.\n\n
        Nulla lobortis ipsum sed nunc dignissim, eu euismod orci sagittis. Nulla facilisi. Mauris euismod enim augue, at congue
        felis sodales non. Fusce faucibus diam ut lorem fringilla dapibus. Vestibulum vestibulum mattis felis nec hendrerit.
        Nullam imperdiet urna lorem, dictum eleifend erat viverra commodo. Pellentesque ut ante pharetra, auctor erat a, volutpat
        lorem. In sit amet accumsan nisl, a tincidunt erat. Pellentesque ut gravida eros. Integer ut auctor lorem, vel pretium
        tortor.</string>

    <string name="user_profile.empty_bio">No user info for now.</string>

    <string name="menu_profile">Мой профиль</string>
    <string name="menu_team">Команда</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галлереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile.chose.message">Выберите фото</string>
    <string name="snackbar_msg.edit_on">Редактирование включено</string>
    <string name="snackbar_msg.data_saved">Данные сохранены</string>
    <string name="validation.msg.phone">Введите номер телефона в формате\n +x (xxx) xxx-xx-xx (от 11 до 20 цифр)</string>
    <string name="validation.msg.email">Недопустимый адрес электронной почты</string>
    <string name="validation.msg.vk">Адрес аккаунта VK должен иметь формат http://vk.com/ххх</string>
    <string name="validation.msg.git">Адрес аккаунта GitHub должен иметь формат https://github.com/ххх</string>
    <string name="snackbar_msg.permissions_request">Для корректной работы приложения необходимо дать требуемые разрешения</string>
    <string name="action.allow_permissions">Разрешить</string>
    <string name="chooser_title.send_mail">Отправить сообщение</string>
    <string name="user_auth.title">ВОЙТИ</string>
    <string name="user_auth.email_hint">Введите E-mail</string>
    <string name="user_auth.password_hint">Введите пароль</string>
    <string name="user_auth.login_button">Войти</string>
    <string name="user_auth.forgot_password">Забыли пароль?</string>

    <string name="user_profile.dummy.rating">5</string>
    <string name="user_profile.dummy.codelines">5</string>
    <string name="user_profile.dummy.projects">5</string>
    <string name="user_profile.dummy.phone">+8 (911) 123-45-67</string>
    <string name="user_profile.dummy.email">mymail@yandex.ru</string>
    <string name="user_profile.dummy.vk">vk.com/antony2279</string>
    <string name="user_profile.dummy.github">github.com/tonnique/DevIntensive</string>
    <string name="user_profile.dummy.bio">@string/str_about_content</string>

    <string name="validation.edit_mode.error">Есть неправильно заполненные поля.\nПроверте правильность заполнения и введите корректные данные</string>
    <string name="load_photo.gallery.exception">Невозможно открыть фото из галлереи</string>
    <string name="load_photo.camera.exception">Не загружается фото с камеры!</string>
    <string name="load_photo.camera_exception.activityStart">Невозможно получить изображение с камеры!</string>
    <string name="browsActivity.error">Невозможно открыть ссылку!</string>

    <!-- Font Family -->
    <string name="ff_regular">sans-serif</string>
    <string name="ff_medium">sans-serif-medium</string>
</resources>
