<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <!-- User Info Section -->
        <LinearLayout
            style="@style/InformationBar">

            <!-- Rating -->
            <LinearLayout
                style="@style/UserInfoBlock"
                android:layout_weight=".25">

                <TextView
                    android:id="@+id/user_rating_tv"
                    style="@style/UserInfoText.Value"
                    android:text="5"/>

                <TextView
                    style="@style/UserInfoText"
                    android:text="@string/str_rating"/>

            </LinearLayout>

            <View style="@style/UserInfoDivider" />

            <!-- Code lines -->
            <LinearLayout
                style="@style/UserInfoBlock"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/user_codelines_tv"
                    style="@style/UserInfoText.Value"
                    android:text="5"/>

                <TextView
                    style="@style/UserInfoText"
                    android:text="@string/str_code_lines"/>

            </LinearLayout>

            <View style="@style/UserInfoDivider" />

            <!-- Projects -->
            <LinearLayout
                style="@style/UserInfoBlock"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/user_projects_tv"
                    style="@style/UserInfoText.Value"
                    android:text="5"/>

                <TextView
                    style="@style/UserInfoText"
                    android:text="@string/str_projects"/>

            </LinearLayout>

        </LinearLayout>

        <!--phone number-->
        <LinearLayout
            style="@style/UserItemBlock">

            <ImageView
                style="@style/Icon.Left"
                android:src="@drawable/ic_call_black_24dp"/>

            <LinearLayout
                style="@style/UserItemTextWrapper">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_et"
                        style="@style/UserItemEditText"
                        android:hint="@string/str_phone"
                        android:inputType="phone"
                        android:text="+7(912)123-45-67"
                        android:enabled="false"
                        android:focusable="false" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/call_img"
                style="@style/Icon.Right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"/>

        </LinearLayout>

        <View style="@style/UserItemDivider" />

        <!--email-->
        <LinearLayout
            style="@style/UserItemBlock">

            <ImageView
                style="@style/Icon.Left"
                android:src="@drawable/ic_email_black_24dp"/>

            <LinearLayout
                style="@style/UserItemTextWrapper">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_et"
                        style="@style/UserItemEditText"
                        android:hint="@string/str_email"
                        android:inputType="textEmailAddress"
                        android:text="my-email@yandex.ru"
                        android:enabled="false"
                        android:focusable="false" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/send_img"
                style="@style/Icon.Right"
                android:src="@drawable/ic_send_black_24dp"/>

        </LinearLayout>

        <View style="@style/UserItemDivider" />

        <!--vk profile-->
        <LinearLayout
            style="@style/UserItemBlock">

            <ImageView
                style="@style/Icon.Left"
                android:src="@drawable/vk_circle"/>

            <LinearLayout
                style="@style/UserItemTextWrapper">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/vk_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/vk_et"
                        style="@style/UserItemEditText"
                        android:hint="@string/str_vk_profile"
                        android:inputType="textUri"
                        android:text="http://vk.com/antony2279"
                        android:enabled="false"
                        android:focusable="false" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/vk_img"
                style="@style/Icon.Right"
                android:src="@drawable/ic_visibility_black_24dp"/>
        </LinearLayout>

        <View style="@style/UserItemDivider" />

        <!--github-->
        <LinearLayout
            style="@style/UserItemBlock">

            <ImageView
                style="@style/Icon.Left"
                android:src="@drawable/github_circle"/>

            <LinearLayout
                style="@style/UserItemTextWrapper">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/github_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/github_et"
                        style="@style/UserItemEditText"
                        android:hint="@string/str_repo"
                        android:inputType="textUri"
                        android:text="https://github.com/tonnique/DevIntensive"
                        android:enabled="false"
                        android:focusable="false" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/git_img"
                style="@style/Icon.Right"
                android:src="@drawable/ic_visibility_black_24dp"/>

        </LinearLayout>

        <View style="@style/UserItemDivider" />

        <!--about-->
        <LinearLayout
            style="@style/UserItemBlock">

            <ImageView
                style="@style/Icon.Left"
                android:src="@drawable/ic_account_circle_black_24dp"/>

            <LinearLayout
                style="@style/UserItemTextWrapper.Multiline">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/about_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/about_et"
                        style="@style/UserItemEditText"
                        android:hint="@string/str_about"
                        android:inputType="textMultiLine"
                        android:text="@string/str_about_content"
                        android:enabled="false"
                        android:focusable="false" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>