<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <!-- User Profile Header -->
    <LinearLayout
        android:id="@+id/profile_header_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_normal_16"
        android:paddingBottom="@dimen/spacing_normal_16"
        android:background="@color/grey">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="@dimen/profile_header_content_height"
                      android:orientation="horizontal"
                      android:background="@color/grey">

            <!-- Rating -->
            <LinearLayout
                style="@style/profile_header"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/user_rating_txt"
                    style="@style/profile_header_text.value"
                    android:text="@string/user_profile.dummy.rating"/>

                <TextView
                    style="@style/profile_header_text.hint"
                    android:text="@string/str_rating"/>

            </LinearLayout>

            <View style="@style/profile_header_divider" />

            <!-- Code lines -->
            <LinearLayout
                style="@style/profile_header"
                android:layout_weight="0.50">

                <TextView
                    android:id="@+id/user_codelines_txt"
                    style="@style/profile_header_text.value"
                    android:text="@string/user_profile.dummy.codelines"/>

                <TextView
                    style="@style/profile_header_text.hint"
                    android:text="@string/str_code_lines"/>

            </LinearLayout>

            <View style="@style/profile_header_divider" />

            <!-- Projects -->
            <LinearLayout
                style="@style/profile_header"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/user_projects_txt"
                    style="@style/profile_header_text.value"
                    android:text="@string/user_profile.dummy.projects"/>

                <TextView
                    style="@style/profile_header_text.hint"
                    android:text="@string/str_projects"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- User Profile Items -->

    <!-- GitHub repositories -->
    <LinearLayout
        android:id="@+id/repositories_wrapper"
        style="@style/profile_item">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/github_circle"/>

        <ListView
            android:id="@+id/repositories_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_medium_32"/>

    </LinearLayout>

    <View style="@style/profile_item_divider"/>

    <!-- About me -->
    <LinearLayout style="@style/profile_item">

        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_account_circle_black_24dp"/>

        <LinearLayout style="@style/profile_item_wrapper">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bio_et"
                    style="@style/profile_item_edit_text"
                    android:hint="@string/str_about"
                    android:inputType="textMultiLine"
                    android:text="@string/user_profile.dummy.bio"
                    android:enabled="false"
                    android:focusable="false" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>