<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:fitsSystemWindows="true" >

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/color_primary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/user_photo_img"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_image_size"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_image"
                    android:fitsSystemWindows="true" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/AppTheme.PopupOverlay"
                    app:titleTextColor="@color/white"
                    app:layout_collapseMode="pin" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- User Info Section -->
                <LinearLayout
                    style="@style/InformationBar">

                    <!-- Rating -->
                    <LinearLayout
                        style="@style/UserInfoBlock"
                        android:layout_weight=".25">

                        <TextView
                            android:id="@+id/user_rating_tv"
                            style="@style/UserInfoText.Value"
                            android:text="5"/>

                        <TextView
                            style="@style/UserInfoText"
                            android:text="@string/str_rating"/>

                    </LinearLayout>

                    <View style="@style/UserInfoDivider" />

                    <!-- Code lines -->
                    <LinearLayout
                        style="@style/UserInfoBlock"
                        android:layout_weight="0.5">

                        <TextView
                            android:id="@+id/user_codelines_tv"
                            style="@style/UserInfoText.Value"
                            android:text="5"/>

                        <TextView
                            style="@style/UserInfoText"
                            android:text="@string/str_code_lines"/>

                    </LinearLayout>

                    <View style="@style/UserInfoDivider" />

                    <!-- Projects -->
                    <LinearLayout
                        style="@style/UserInfoBlock"
                        android:layout_weight="0.25">

                        <TextView
                            android:id="@+id/user_projects_tv"
                            style="@style/UserInfoText.Value"
                            android:text="5"/>

                        <TextView
                            style="@style/UserInfoText"
                            android:text="@string/str_projects"/>

                    </LinearLayout>

                </LinearLayout>

                <!--phone number-->
                <LinearLayout
                    style="@style/UserItemBlock">

                    <ImageView
                        style="@style/Icon.Left"
                        android:src="@drawable/ic_call_black_24dp"/>

                    <LinearLayout
                        style="@style/UserItemTextWrapper">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/phone_et"
                                style="@style/UserItemEditText"
                                android:hint="@string/str_phone"
                                android:inputType="phone"
                                android:text="+7(912)123-45-67"
                                android:enabled="false"
                                android:focusable="false" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/call_img"
                        style="@style/Icon.Right"
                        android:src="@drawable/ic_phone_in_talk_black_24dp"/>

                </LinearLayout>

                <View style="@style/UserItemDivider" />

                <!--email-->
                <LinearLayout
                    style="@style/UserItemBlock">

                    <ImageView
                        style="@style/Icon.Left"
                        android:src="@drawable/ic_email_black_24dp"/>

                    <LinearLayout
                        style="@style/UserItemTextWrapper">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/email_et"
                                style="@style/UserItemEditText"
                                android:hint="@string/str_email"
                                android:inputType="textEmailAddress"
                                android:text="my-email@yandex.ru"
                                android:enabled="false"
                                android:focusable="false" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <ImageView
                        style="@style/Icon.Right"
                        android:src="@drawable/ic_send_black_24dp"/>

                </LinearLayout>

                <View style="@style/UserItemDivider" />

                <!--vk profile-->
                <LinearLayout
                    style="@style/UserItemBlock">

                    <ImageView
                        style="@style/Icon.Left"
                        android:src="@drawable/vk_circle"/>

                    <LinearLayout
                        style="@style/UserItemTextWrapper">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/vk_et"
                                style="@style/UserItemEditText"
                                android:hint="@string/str_vk_profile"
                                android:inputType="textUri"
                                android:text="http://vk.com/antony2279"
                                android:enabled="false"
                                android:focusable="false" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <ImageView
                        style="@style/Icon.Right"
                        android:src="@drawable/ic_visibility_black_24dp"/>
                </LinearLayout>

                <View style="@style/UserItemDivider" />

                <!--github-->
                <LinearLayout
                    style="@style/UserItemBlock">

                    <ImageView
                        style="@style/Icon.Left"
                        android:src="@drawable/github_circle"/>

                    <LinearLayout
                        style="@style/UserItemTextWrapper">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/github_et"
                                style="@style/UserItemEditText"
                                android:hint="@string/str_repo"
                                android:inputType="textUri"
                                android:text="https://github.com/tonnique/DevIntensive"
                                android:enabled="false"
                                android:focusable="false" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <ImageView
                        style="@style/Icon.Right"
                        android:src="@drawable/ic_visibility_black_24dp"/>

                </LinearLayout>

                <View style="@style/UserItemDivider" />

                <!--about-->
                <LinearLayout
                    style="@style/UserItemBlock">

                    <ImageView
                        style="@style/Icon.Left"
                        android:src="@drawable/ic_account_circle_black_24dp"/>

                    <LinearLayout
                        style="@style/UserItemTextWrapper.Multiline">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/about_et"
                                style="@style/UserItemEditText"
                                android:hint="@string/str_about"
                                android:inputType="textMultiLine"
                                android:text="@string/str_about_content"
                                android:enabled="false"
                                android:focusable="false" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fab_right_space"
            android:src="@drawable/ic_create_black_24dp"
            app:layout_anchor="@id/appbar_layout"
            app:layout_anchorGravity="bottom|right"
            app:useCompatPadding="true"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>